修复部门管理和利润中心管理自动更改状态问题